@startuml CLASSES_PARTICIPANTES_ACTIVITES
title "Classes participantes — Gérer les activités du système"

skinparam classAttributeIconSize 0

class Administrateur <<actor>>

class ReportingPage <<boundary>> {
  - auditEvents : AuditEventResponse[]
  - filters : { date, action, actor }
  - reportOverview : PlatformReportOverviewResponse
  --
  + loadAudit(page) : void
  + applyFilters() : void
  + loadReportOverview() : void
}

class AuditBffController <<boundary>> {
  - auditClient : AuditClient
  --
  + listEvents(page, size, filters) : Page~AuditEventResponse~
}

class StatsBffController <<boundary>> {
  - auditClient : AuditClient
  - careEntryClient : CareEntryClient
  --
  + activityReport() : ActivityReportResponse
  + volumes() : PlatformReportOverviewResponse
}

class AuditEventController <<boundary>> {
  - auditEventService : AuditEventService
  --
  + list(page, size, actor, action, from, to) : Page~AuditEventResponse~
  + ingest(request) : AuditEventResponse
}

class AuditEventService <<control>> {
  - auditEventRepository : AuditEventRepository
  --
  + list(...) : Page~AuditEventResponse~
  + ingest(request) : AuditEventResponse
  + buildActivityReport() : ActivityReportResponse
}

class AuditEvent <<entity>> {
  - id : Long
  - eventId : UUID
  - occurredAt : Instant
  - actorUsername : String
  - action : String
  - resourceType : String
  - resourceId : String
  - sourceService : String
  - metadataJson : String
}

Admin "1" --> "1" ReportingPage : association
ReportingPage "1" --> "1" AuditBffController : association
ReportingPage "1" --> "1" StatsBffController : association
AuditBffController "1" --> "1" AuditEventController : association
AuditEventController "1" --> "1" AuditEventService : association
AuditEventService "1" --> "0..*" AuditEvent : association

legend right
--
  **Relations** : association (--) · dependency (..>)
  Multiplicities on each link
endlegend

@enduml